--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <a href="mailto:stewart@zeropoint25.com">
     <img src="SW_Website2.jpg" width="447" height="175" border="0" />
   </a>
+  <!-- github pages -->
 </body>
 </html>
