--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Stewart Walker</title>
-  <style type="text/css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>zeropoint25</title>
+	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			background-color: #111111;
+		}
+		.container {
+			padding: 15px;
+			position: relative;
+		}
+		p,
+		a {
+			color: #FFFFFF;
+			display: inline-block;
+			vertical-align: top;
+			font-family: 'Helvetica', 'Rubik', sans-serif;
+			font-size: 18px;
+			position: absolute;
+			top: 15px;
+			margin: 0;
+			padding: 0;
+			letter-spacing: 0.1em;
+		}
 
-    body {
-      background-color: #000;
-    }
+		p {
+			left: 15px;
+		}
 
-  </style>
+		a {
+			cursor: pointer;
+			right: 15px;
+			text-decoration: none;
+		}
+		a:hover {
+			opacity: 0.3;
+		}
+
+	</style>
 </head>
-
 <body>
-  <a href="mailto:stewart@zeropoint25.com">
-    <img src="SW_Website2.jpg" width="447" height="175" border="0" />
-  </a>
-  <!-- github pages -->
+	<div class="container">
+		<p>Zero Point 25</p>
+		<a href="mailto:stewart@zeropoint25.com">Contact</a>
+	</div>
+	
 </body>
 </html>
